fixed mobile latest projects wrapping

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -117,15 +117,24 @@ img {
   text-decoration: none;
 }
 
+
 .latest-projects {
   display: flex;
   align-items: baseline;
+  flex-wrap: wrap;
+
+
+  h2 {
+    margin-right: 2.5rem;
+  }
+
 }
 
 .see-all-btn{
   display: inline;
-  margin-left: 2.5rem;
+  margin-bottom: 2rem;
 }
+
 
 @media screen and (min-width: 600px) {
   
